--- a/goslinks/templates/links.html
+++ b/goslinks/templates/links.html
@@ -2,9 +2,16 @@
 
 <title>Goslinks</title>
 
-<p>The links are:<p>
-<ul>
-    {% for link in links %}
-        <li><a href="{{ link.url }}">{{ link.slug }}</a> (owned by {{ link.owner_user.email }})</li>
-    {% endfor %}
-</ul>
+{% if user %}
+    <p>You are currently logged in as {{ user.name }}.<p>
+    <img src="{{ user.photo }}" />
+
+    <p>Your links are:<p>
+    <ul>
+        {% for link in links %}
+            <li><a href="{{ link.url }}">{{ link.slug }}</a> (owned by {{ link.owner_user.email }})</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>You are not currently logged in.</p>
+{% endif %}
