--- a/goslinks/templates/edit.html
+++ b/goslinks/templates/edit.html
@@ -3,7 +3,7 @@
 <title>Goslinks</title>
 
 <nav>
-    Not {{ user.name }}? <a href="{{ url_for('google_oauth2.logout') }}">Logout</a>
+    Not {{ user.name }}? <a href="{{ url_for('auth.logout') }}">Logout</a>
 </nav>
 
 <h2>
