--- a/goslinks/templates/home.html
+++ b/goslinks/templates/home.html
@@ -8,5 +8,5 @@
 </header>
 
 <main>
-    <p>To get started, <a href="{{ url_for('google_oauth2.login') }}">login</a> to your work account.</p>
+    <p>To get started, <a href="{{ url_for('loginpass.login', name='google') }}">login</a> to your work account.</p>
 </main>
